force-app/main/default/objects/Call_Line__c/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <formula>IF(ISPICKVAL(Case_Type__c, &apos;TelUW&apos;), DATEVALUE(WelcomeCall_Schedule_Date__c) + 30, if ( and(RecordType.Name == &apos;TeleService&apos;, NOT(ISBLANK(Due_Date__c)) ),  Due_Date__c , Call_List__r.Expired_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Date</label>
    <type>Date</type>
</CustomField>