force-app/main/default/objects/Call_Line__c/fields/Ext_ID_F__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID_F__c</fullName>
    <formula>NULLVALUE(Refference_No__c,&apos;&apos;)&amp;&quot;&quot;&amp;NULLVALUE(Policy_No__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext_ID_F</label>
    <type>Text</type>
</CustomField>