force-app/main/default/objects/Call_Line__c/fields/Ext_ID_Temp__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID_Temp__c</fullName>
    <label>Reff / Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>