force-app/main/default/objects/Call_Line__c/fields/F_User_Detail__c.field-meta.xml
<CustomField>
    <fullName>F_User_Detail__c</fullName>
    <formula>IF (ISBLANK(TEXT( Call_List__r.Case_Type__c)), TEXT(Call_List__r.Activity__c), TEXT(Call_List__r.Activity__c) &amp; &quot; - &quot;&amp; TEXT(Call_List__r.Case_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F User Detail</label>
    <type>Text</type>
</CustomField>