force-app/main/default/objects/Call_Line__c/fields/First_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>