force-app/main/default/objects/Call_Line__c/fields/Follow_Up_ICF__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_ICF__c</fullName>
    <formula>Case__r.Follow_Up_ICF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up ICF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>