force-app/main/default/objects/Call_Line__c/fields/Follow_Up_Information__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Information__c</fullName>
    <label>Follow Up Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>