force-app/main/default/objects/Call_Line__c/fields/Follow_Up_Result__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Result__c</fullName>
    <label>Follow Up Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>