force-app/main/default/objects/Call_Line__c/fields/Follow_Up_Status_AGI__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status_AGI__c</fullName>
    <description>Follow Up Status AGI</description>
    <label>Follow Up Status AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>