force-app/main/default/objects/Call_Line__c/fields/Formula_Product__c.field-meta.xml
<CustomField>
    <fullName>Formula_Product__c</fullName>
    <formula>Contact__r.WelcomeCall_Product_Code_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Product</label>
    <type>Text</type>
</CustomField>