force-app/main/default/objects/Call_Line__c/fields/Grand_Total_Update_Data_ALI__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Update_Data_ALI__c</fullName>
    <formula>IF(
OR( ISPICKVAL( Reason_Status_Config__c , &apos;Cancel&apos;),
ISPICKVAL(Reason_Status_Config__c , &apos;Done&apos;),
ISPICKVAL(Reason_Status_Config__c , &apos;Hard Contact&apos;),
ISPICKVAL(Reason_Status_Config__c , &apos;No Pickup/ Mailbox&apos;),
ISPICKVAL(Reason_Status_Config__c , &apos;ALI - Wrong Number&apos;),
ISPICKVAL(Reason_Status_Config__c , &apos;&apos;)

), 1, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Update Data ALI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>