force-app/main/default/objects/Call_Line__c/fields/HOMEPHONE__c.field-meta.xml
<CustomField>
    <fullName>HOMEPHONE__c</fullName>
    <label>HOMEPHONE</label>
    <type>Phone</type>
</CustomField>