force-app/main/default/objects/Call_Line__c/fields/ID_User_RLS_DMTM__c.field-meta.xml
<CustomField>
    <fullName>ID_User_RLS_DMTM__c</fullName>
    <formula>IF(Contact__r.PolicyApp__c=&apos;DMTM&apos;,Agent__r.ID_User_DMTM__c,IF(Contact__r.PolicyApp__c=&apos;RLS&apos;,Agent__r.ID_User_RLS__c,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID User RLS/DMTM</label>
    <type>Text</type>
</CustomField>