force-app/main/default/objects/Call_Line__c/fields/Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date__c</fullName>
    <label>Inception Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>