force-app/main/default/objects/Call_Line__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <formula>Contact__r.Insured_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Name</label>
    <type>Text</type>
</CustomField>