force-app/main/default/objects/Call_Line__c/fields/Is_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allowed</label>
    <type>Checkbox</type>
</CustomField>