force-app/main/default/objects/Call_Line__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>IF(TEXT(Entity__c) == &apos;ALI&apos;,IF(Expired_Date__c &lt; today(), true, false),
IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos;,IF(Expired_Date__c &lt; today() || Call_List__r.IsExpired__c==true,true,false),IF(Expired_Date__c &lt;= today(), true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>