force-app/main/default/objects/Call_Line__c/fields/is_Negative_Survey__c.field-meta.xml
<CustomField>
    <fullName>is_Negative_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Negative Survey?</label>
    <type>Checkbox</type>
</CustomField>