force-app/main/default/objects/Call_Line__c/fields/IsCallBack__c.field-meta.xml
<CustomField>
    <fullName>IsCallBack__c</fullName>
    <formula>IF(
OR(
 ISPICKVAL(Call_Result__c, &apos;Callback - Line Busy&apos;) ,
 ISPICKVAL(Call_Result__c, &apos;Callback - Member Busy&apos;) 
)
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Call Back</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>