force-app/main/default/objects/Call_Line__c/fields/isContacted__c.field-meta.xml
<CustomField>
    <fullName>isContacted__c</fullName>
    <formula>IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos;  &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) != &apos;Redemption TM&apos;,Total_Approved__c+ Total_Not_Approved__c,IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos;  &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos; &amp;&amp; (TEXT(Call_Status_Config__c)== &apos;Cancel&apos; || TEXT(Call_Status_Config__c)== &apos;Inforced&apos; || TEXT(Call_Status_Config__c)== &apos;Pending&apos;),1,IF( ISPICKVAL(Activity_Result__c , &apos;Contacted&apos;),1,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>