force-app/main/default/objects/Call_Line__c/fields/isFresh__c.field-meta.xml
<CustomField>
    <fullName>isFresh__c</fullName>
    <formula>IF( Call_Generated_Counter__c = 0, &apos;Fresh&apos;,&apos;Callback&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fresh?</label>
    <type>Text</type>
</CustomField>