force-app/main/default/objects/Call_Line__c/fields/isNotStarted__c.field-meta.xml
<CustomField>
    <fullName>isNotStarted__c</fullName>
    <formula>IF(
ISPICKVAL(Call_Result__c,&apos;Not Started&apos;)
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Not Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>