force-app/main/default/objects/Call_Line__c/fields/isOwnerQueue__c.field-meta.xml
<CustomField>
    <fullName>isOwnerQueue__c</fullName>
    <formula>OwnerId == Owner:Queue.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isOwnerQueue</label>
    <type>Checkbox</type>
</CustomField>