force-app/main/default/objects/Call_Line__c/fields/Issued_Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date_Contact__c</fullName>
    <formula>Contact__r.WelcomeCall_Issued_Date__c</formula>
    <label>Issued Date Contact</label>
    <type>Date</type>
</CustomField>