force-app/main/default/objects/Call_Line__c/fields/isUnwilling__c.field-meta.xml
<CustomField>
    <fullName>isUnwilling__c</fullName>
    <formula>IF(
ISPICKVAL(Call_Result__c,&apos;Unwilling&apos;)
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unwilling/Refused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>