force-app/main/default/objects/Call_Line__c/fields/isWelcomeCallPeriod__c.field-meta.xml
<CustomField>
    <fullName>isWelcomeCallPeriod__c</fullName>
    <formula>IF(Contact__r.Campaign_Type__c = &apos;TelUW&apos;,
   (TODAY() - DATEVALUE(WelcomeCall_Schedule_Date__c)) &lt;= 29,
   (TODAY() - Contact__r.WelcomeCall_Issued_Date__c) &lt;= 
   (IF(WEEKDAY(Contact__r.WelcomeCall_Issued_Date__c ) = 2,17,19))
)</formula>
    <label>isWelcomeCallPeriod</label>
    <type>Checkbox</type>
</CustomField>