force-app/main/default/objects/Call_Line__c/fields/Jawaban_Understand_Product__c.field-meta.xml
<CustomField>
    <fullName>Jawaban_Understand_Product__c</fullName>
    <label>Jawaban (Understand Product)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ya</fullName>
            </value>
            <value>
                <fullName>Tidak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>