force-app/main/default/objects/Call_Line__c/fields/Jenis_Agent__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Agent__c</fullName>
    <label>Jenis Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTERNAL</fullName>
            </value>
            <value>
                <fullName>EXTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>