force-app/main/default/objects/Call_Line__c/fields/Keterangan__c.field-meta.xml
<CustomField>
    <fullName>Keterangan__c</fullName>
    <label>Keterangan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>