force-app/main/default/objects/Call_Line__c/fields/Lapse_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Lapse_Date_Day__c</fullName>
    <formula>Contact__r.Lapse_Date_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lapse Date Day</label>
    <type>Date</type>
</CustomField>