force-app/main/default/objects/Call_Line__c/fields/Last_Answer__c.field-meta.xml
<CustomField>
    <fullName>Last_Answer__c</fullName>
    <formula>Contact__r.Last_Answer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Answer</label>
    <type>Text</type>
</CustomField>