force-app/main/default/objects/Call_Line__c/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI</inlineHelpText>
    <label>Last Call</label>
    <type>DateTime</type>
</CustomField>