force-app/main/default/objects/Call_Line__c/fields/Last_Case__c.field-meta.xml
<CustomField>
    <fullName>Last_Case__c</fullName>
    <formula>Contact__r.Last_Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Case</label>
    <type>Text</type>
</CustomField>