force-app/main/default/objects/Call_Line__c/fields/Last_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Date__c</fullName>
    <formula>Contact__r.Last_Response_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Response Date</label>
    <type>Date</type>
</CustomField>