force-app/main/default/objects/Call_Line__c/fields/Last_SMS__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI</inlineHelpText>
    <label>Last SMS</label>
    <type>DateTime</type>
</CustomField>