force-app/main/default/objects/Call_Line__c/fields/Last_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Type__c</fullName>
    <formula>Contact__r.Last_Survey_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Survey Type</label>
    <type>Text</type>
</CustomField>