force-app/main/default/objects/Call_Line__c/fields/LastModifiedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateOnly__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>LastModifiedDateOnly</label>
    <type>Date</type>
</CustomField>