force-app/main/default/objects/Call_Line__c/fields/LOB_AGI__c.field-meta.xml
<CustomField>
    <fullName>LOB_AGI__c</fullName>
    <description>LOB AGI</description>
    <label>LOB AGI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>