force-app/main/default/objects/Call_Line__c/fields/MCM__c.field-meta.xml
<CustomField>
    <fullName>MCM__c</fullName>
    <label>MCM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>