force-app/main/default/objects/Call_Line__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : CC, Saving</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>