force-app/main/default/objects/Call_Line__c/fields/MobilePhone2_Upload__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2_Upload__c</fullName>
    <label>MobilePhone2 (Upload)</label>
    <type>Phone</type>
</CustomField>