force-app/main/default/objects/Call_Line__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : IN, PE</inlineHelpText>
    <label>Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>