force-app/main/default/objects/Call_Line__c/fields/Nama_Bank__c.field-meta.xml
<CustomField>
    <fullName>Nama_Bank__c</fullName>
    <label>Nama Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>