force-app/main/default/objects/Call_Line__c/fields/Name_1__c.field-meta.xml
<CustomField>
    <fullName>Name_1__c</fullName>
    <description>ALI</description>
    <inlineHelpText>ALI
Exp : ANN MARIE</inlineHelpText>
    <label>Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>